# data-discovery

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MCP.md  README.md  SPECS_get_tools.md  claude_config.example.json  claude_config.json  claude_desktop_config_example.json  pyproject.toml  run_discovery_server.py
.claude/: mcp-llms-full.txt
.github/workflows/: pytest.yml  release_stg.yaml
assets/: architecture.drawio
infrastructure/: app.py  cdk.json  ddm_stack.py
src/data_discovery/: __init__.py  config.py  main.py  project_manager.py  server.py
src/data_discovery/api/: __init__.py  router.py  service.py
src/data_discovery/api/discovery/: __init__.py  get_description.py  get_models.py  get_resources.py  refresh_cache.py
src/data_discovery/core/: project_discovery.py  service.py
src/data_discovery/mcp/: __init__.py  server.py
src/data_discovery/mcp/prompts/: prompts.py
src/data_discovery/prompts/: __init__.py
src/data_discovery/prompts/discovery/: get_description.md  get_model_details.md  get_models.md  get_resources.md
src/data_discovery/prompts/shared/: dbt_catalog_json.md  flipside_naming_convention.md
src/data_discovery/resources/: __init__.py  dbt_projects.csv
src/data_discovery/tools/: __init__.py
src/data_discovery/tools/dbt_cli/: README.md  dbt_compile.py  dbt_list.py  dbt_show.py  utils.py
src/data_discovery/tools/discovery/: __init__.py  get_description.py  get_model_details.py  get_models.py  get_resources.py  properties.py  utils.py
src/fsc_dbt_mcp/: __init__.py  project_manager.py  server.py
src/fsc_dbt_mcp/prompts/: __init__.py  prompts.py
src/fsc_dbt_mcp/prompts/dbt_cli/: dbt_show.md  selector.md
src/fsc_dbt_mcp/prompts/discovery/: get_description.md  get_model_details.md  get_models.md  get_resources.md
src/fsc_dbt_mcp/prompts/shared/: dbt_manifest_json.md  selector.md
src/fsc_dbt_mcp/resources/: README.md  __init__.py  bitcoin_models.py  dbt_project_resource.py  dbt_projects.csv  ethereum_models.py  kairos_models.py
src/fsc_dbt_mcp/tools/: __init__.py  dbt_cli.py  discovery.py
src/fsc_dbt_mcp/tools/dbt_cli/: __init__.py  dbt_compile.py  dbt_list.py  dbt_show.py
src/fsc_dbt_mcp/tools/discovery/: __init__.py  get_description.py  get_model_details.py  get_models.py  get_resources.py  properties.py  utils.py
tests/: test_service.py
