[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "data-discovery"
description = "REST API for dbt project discovery across blockchain datasets with optional MCP integration"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.0"
authors = [
    { name = "forgxyz" },
]
dependencies = [
    "mcp==1.9.3",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.3",
    "fastapi-mcp>=0.3.4",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "aws-cdk-lib>=2.201.0",
]

[project.scripts]
data-discovery = "data_discovery.main:app"
data-discovery-mcp = "data_discovery.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]
github = []

[tool.uv]
dev-dependencies = []
